# api/docs/swagger.yaml
@@ -44,6 +44,22 @@ info:
   title: Swagger Example API
   version: "1.0"
 paths:
+  /:
+    get:
+      consumes:
+      - '*/*'
+      description: get the status of server.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Show the status of server.
+      tags:
+      - root
   /accounts/{id}:
     get:
       consumes:
