# api/main.go
@@ -1,15 +1,32 @@
 package main
 
 import (
-	"microservice/src/controllers"
 	"net/http"
 
 	ginSwagger "github.com/swaggo/gin-swagger"
-	_ "github.com/swaggo/gin-swagger/example/basic/docs" // docs is generated by Swag CLI, you have to import it.
 	"github.com/swaggo/gin-swagger/swaggerFiles"
+
+	_ "microservice/docs"
+	"microservice/src/controllers"
 
 	"github.com/gin-gonic/gin"
 )
+
+// HealthCheck godoc
+// @Summary Show the status of server.
+// @Description get the status of server.
+// @Tags root
+// @Accept */*
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Router / [get]
+func HealthCheck(c *gin.Context) {
+	res := map[string]interface{}{
+		"data": "Server is up and running",
+	}
+
+	c.JSON(http.StatusOK, res)
+}
 
 // @title Swagger Example API
 // @version 1.0
@@ -52,8 +69,7 @@ func main() {
 	// url := ginSwagger.URL("http://petstore.swagger.io:8080/swagger/doc.json") // The url pointing to API definition
 	// router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
 
-	url := ginSwagger.URL("http://localhost:8080/swagger/doc.json") // The url pointing to API definition
+	url := ginSwagger.URL("http://localhost:8080/swagger/doc.json")
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
-
-	http.ListenAndServe(":8080", router)
+	router.Run()
 }
